<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arctouch.com.floripapublictransportation.activity.ListActivity"
    android:background="@color/background_floating_material_dark">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="100"
        android:id="@+id/progressBarList"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSearch"
        android:text="Enter a street name: "
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_below="@+id/textViewSearch">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSearch"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:singleLine="true"
            android:layout_weight="1"
            android:imeOptions="actionSearch"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="Search"
            android:id="@+id/buttonSearch"
            android:onClick="onButtonClick"
            android:nestedScrollingEnabled="true"
            android:background="@mipmap/search"
            android:layout_alignRight="@+id/editTextSearch"
            android:layout_marginLeft="5dip"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="Maps"
            android:id="@+id/buttonShowMaps"
            android:layout_alignRight="@+id/buttonSearch"
            android:onClick="onButtonShowMapsClick"
            android:nestedScrollingEnabled="true"
            android:background="@mipmap/maps"
            android:layout_marginLeft="5dip"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listViewRoute"
        android:layout_below="@+id/linearLayout" />
</RelativeLayout>
