...
            android:textSize="10dp"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="Search"
            android:id="@+id/buttonSearchMaps"
            android:onClick="onButtonClick"
            android:nestedScrollingEnabled="true"
            android:background="@mipmap/search"
            android:layout_alignRight="@+id/textViewMap"
            android:layout_marginLeft="5dip"
            android:layout_alignParentRight="true"/>
...
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:id="@+id/buttonInvisible"
            android:onClick="onButtonInvisibleClick" />
    </RelativeLayout>

</RelativeLayout>

