...
            android:layout_weight="1"
            android:text="Route"
            android:textColor="#ffffff"
            android:textSize="25dp" />

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/textViewRoute"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dip"
...
